--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<a id="linkcolor" href="https://freshbooked.herokuapp.com/" target="_blank">Freshbooked</a><span id="date">(2016)</span>
 			</p>
 			<p id="work2">
-				<a id="linkcolor" href="http://www.tossy2.herokuapp.com" target="_blank">Tossy</a><span id="date">(2016)</span>
+				<a id="linkcolor" href="https://tossy2.herokuapp.com/" target="_blank">Tossy</a><span id="date">(2016)</span>
 				
 			</p>
 			<p id="work3">
