--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!-- about me -->
 		<div class="aboutMe"> Hi, I'm 
 			<span class="daniel">
-				<a href="mailto:daniel@danielwolkowitz.com?Subject=Hello%20is it me you're looking for," target="_top">
+				<a href="mailto:danielwolkowitz23@gmail.com?Subject=Hello%20is it me you're looking for," target="_top">
 					Daniel
 				</a>
 			
