--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			</span> 
 
 			<div class="cv">
-				<a id="social_links" href="mailto:daniel@danielwolkowitz.com?Subject=Hello%20is it me you're looking for," target="_top">Contact</a> -
+				<a id="social_links" href="mailto:danielwolkowitz23@gmail.com?Subject=Hello%20is it me you're looking for," target="_top">Contact</a> -
 
 				<a id="social_links" href="https://www.linkedin.com/in/danielwolkowitz"target="_blank">LinkedIn</a> - 
 				<a id="social_links" href="https://www.github.com/danielwolkowitz"target="_blank">Github</a>
