new updates to scheme

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Daniel Wolkowitz</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+	
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -30,13 +31,13 @@
 				</a>
 			
 			</span> 
-				. I'm a Jr. 
+				. I'm a 
 			<span class="daniel">
 
-				FullStack Developer
+				FullStack Developer &
 
 			</span> 
-				& 
+				 
 			<span class="daniel">
 				<a href="http://www.danielnlord.com" target="_blank">
 				Photographer
