--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <div class="slide">
 	<div class="wrapper">
 		<!-- about me -->
-		<div class="aboutMe"> Hi, I'm 
+		<div class="aboutMe"> Hi! I'm 
 			<span class="daniel">
-				<a href="mailto:danielwolkowitz23@gmail.com?Subject=Hello%20is it me you're looking for ?" target="_top" rel="noopener noreferrer">
+				<a href="mailto:danielwolkowitz23@gmail.com?Subject=Hello%20is it me you're looking for?"  rel="noopener noreferrer">
 					Daniel
 				</a>
 			
@@ -55,7 +55,7 @@
 			</span> 
 
 			<div class="cv">
-				<a id="social_links" href="">Blog</a> - 
+				<a id="social_links" href="blog.danielwolkowitz.com">Blog</a> - 
 				<a id="social_links" href="mailto:danielwolkowitz23@gmail.com?Subject=Hello%20is it me you're looking for," target="_top" rel="noopener noreferrer">Contact</a> -
 
 				<a id="social_links" href="https://www.linkedin.com/in/danielwolkowitz"target="_blank" rel="noopener noreferrer">LinkedIn</a> - 
