--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				PROJECTS
 			</p>
 			<div id="first_project">
-					<a id="linkcolor" href="https://freshbooked.herokuapp.com/" target="_blank" rel="noopener noreferrer">Freshbooked</a><span id="date">Click(2016)</span>
+					<a id="linkcolor" href="https://freshbooked.herokuapp.com/" target="_blank" rel="noopener noreferrer">Freshbooked</a><span id="date">(2016)</span>
 					
 				<p class="project_info">
 					Research - UX/UI - Front End Development 
