updated content words

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					What if choosing a new book didnt have to be time consuming? What if the choices could be knocked down to the three best rated books available, a genre you're actually into and a book length you actually had time for? 
 					<br> 
 					<br>
-					Using GoogleBooks API, we developed a web app that was intuitive and easy to use and returns three top rated books that align with your criteria.  
+					Using GoogleBooks API, we developed a web app that was intuitive and easy to use and returns three top rated books that align with those criteria.  
 				</p>
 			</div>
 			<div id="second_project">
@@ -98,7 +98,7 @@
 						Ever wonder just what happens to all your privacy and information when you click that "I agree to the terms and conditions" button? 
 						<br>
 						<br>
-						Tossy was designed to inform the user just what happens to their information as they use the top 6 social media platforms.
+						Tossy was designed to inform the user just what happens to their information as they sign up and use the platforms of the top 6 social media platforms.
 					</p>
 			</div>
 			<div id="third_project">
@@ -107,7 +107,7 @@
 						UX/UI - Front End Development
 					</p>
 					<p class="explanation">
-						Personal photography portfolio with an emphasis on ease of navigation and use. Largely design behind showcasing photography and minimal words. 
+						Personal photography portfolio with an emphasis on ease of navigation and use.
 					</p>
 			</div>
 		</div>
